--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -16,11 +16,11 @@
       <a href="{{ .Permalink }}">{{ .Title }}</a>
     </h2>
     <div class="meta">
-      <p class="date">{{ .Date.Format "Monday, Jan 2, 2006" }}</p>
+      <p class="date">{{ .Date.Format .Site.Params.DateFormat }}</p>
       <p class="author">@ {{ if isset .Params "author" }}{{ .Params.author }}{{ else }}{{ .Site.Params.author }}{{ end }}</p>
     </div>
     <div class="description">
-      {{ .Summary | plainify | htmlUnescape }}
+      {{ .Summary | plainify | htmlUnescape }}&nbsp;(<a href="{{ .Permalink }}">{{ i18n "readMore" }}</a>)
     </div>
   </div>
 
