--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,6 +17,9 @@
         <i class="archive icon" title="{{ i18n "archives" }}"></i>
       </a>
       {{ end }}
+      <a class="item" href="{{ "/artists" | relURL }}">
+        <i class="microphone icon" title="{{ i18n "allArtists" }}"></i>
+      </a>
       <a class="item" href="{{ "/tags" | relURL }}">
         <i class="tags icon" title="{{ i18n "allTags" }}"></i>
       </a>
